--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt_br">
   <head>
+    <meta charset="UTF_8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Atila Silva - DoWhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
